@@ -602,12 +602,17 @@ proc upgrade_test_upgrade_run_script { bckp_dir } {
    set USE_EXISTING_JMX             [translate $ts_config(master_host) 0 1 0 [sge_macro DISTINCT_UPGRADE_USE_EXISTING_JMX]]
    set USE_EXISTING_SPOOLING        [translate $ts_config(master_host) 0 1 0 [sge_macro DISTINCT_UPGRADE_USE_EXISTING_SPOOLING]"*"]
 
+
+   set PKGADD_QUESTION              [translate $ts_config(master_host) 0 1 0 [sge_macro DISTINST_PKGADD_QUESTION] ]
+   set PKGADD_QUESTION_SINCE_U3     [translate $ts_config(master_host) 0 1 0 [sge_macro DISTINST_PKGADD_QUESTION_SINCE_U3] ]
+
+
    set id [open_remote_spawn_process "$ts_config(master_host)" "root"  "./inst_sge" "-upd $feature_install_options" 0 "$ts_config(product_root)"]
    set sp_id [ lindex $id 1 ]
-
+   set my_upgrade_timeout 60
    while { true } {
       log_user 1
-      set timeout 60
+      set timeout $my_upgrade_timeout
       expect {
          -i $sp_id full_buffer {
             ts_log_severe "buffer overflow please increment CHECK_EXPECT_MATCH_MAX_BUFFER value"
@@ -628,7 +633,12 @@ proc upgrade_test_upgrade_run_script { bckp_dir } {
          }
 
          -i $sp_id timeout { 
-            ts_log_severe "timeout while waiting for output" 
+            if {[info exists expect_out(buffer)]} {
+               set buffer_output [format_array expect_out]
+            } else {
+               set buffer_output "n.a."
+            }
+            ts_log_severe "timeout while waiting for output\nTimeout was $my_upgrade_timeout\nexpect buffer:\n$buffer_output" 
             close_spawn_process $id
             return -1
          }
@@ -682,6 +692,26 @@ proc upgrade_test_upgrade_run_script { bckp_dir } {
                set anykey [wait_for_enter 1]
             }
             ts_send $sp_id "$ANSWER_YES\n"
+            continue
+         }
+
+         -i $sp_id $PKGADD_QUESTION {
+            ts_log_fine "\n -->testsuite: sending >$ANSWER_NO<"
+            if {$do_log_output == 1} {
+               puts "press RETURN"
+               set anykey [wait_for_enter 1]
+            }
+            ts_send $sp_id "$ANSWER_NO\n"
+            continue
+         }
+
+         -i $sp_id $PKGADD_QUESTION_SINCE_U3 {
+            ts_log_fine "\n -->testsuite: sending >$ANSWER_NO<"
+            if {$do_log_output == 1} {
+               puts "press RETURN"
+               set anykey [wait_for_enter 1]
+            }
+            ts_send $sp_id "$ANSWER_NO\n"
             continue
          }
 
