@@ -6,6 +6,9 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 -----------------+-----------+--------------------------------------------------
+CR-2009-05-27-2: Bugfix:     fixed upgrade_test
+                 Review:     MD
+
 CR-2009-05-27-1: Bugfix:     fixed jemalloc test which fails for qmon -help when
                              libXm is not installed
                  Review:     SH
